--- a/src/components/Field/Field.module.css
+++ b/src/components/Field/Field.module.css
@@ -3,21 +3,24 @@
 }
 
 .title {
-  line-height: 1;
   margin-bottom: 5px;
+  line-height: 1;
 }
 
 .error {
   color: var(--c-red);
-  font-size: 12px;
-  height: 25px;
-  line-height: 1;
   padding-top: 5px;
+  font-size: 12px;
+  line-height: 1;
+  height: 25px;
 }
 
 .input {
-  height: 45px;
-  padding-left: 10px;
   padding-right: 10px;
+  padding-left: 10px;
+  height: 45px;
+}
 
+.textarea {
+  height: 400px;
 }
