--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -18,13 +18,6 @@
   gap: 20px;
 }
 
-.input {
-  border: 1px solid var(--c-gainsboro);
-  padding-right: 15px;
-  padding-left: 15px;
-  border-radius: 5px;
-}
-
-.input:hover {
-  border-color: var(--c-orange);
+.title {
+  padding-bottom: 10px;
 }
