--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -1,10 +1,12 @@
 .form {
   border: 1px solid var(--c-orange);
-  padding: 20px;
   background-color: var(--c-linen);
+  max-width: 550px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .title {
-  text-align: center;
   padding-bottom: 20px;
+  text-align: center;
 }
